--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-env": "^1.7.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gsap": "^3.0.4",
     "mongoose": "^5.8.4",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1"
